--- a/4R.md
+++ b/4R.md
@@ -84,7 +84,7 @@ Although most debate revolved around how the body determined identity, there wer
 
 
 
-**The Crowd and the Lonely**
+### The Crowd and the Lonely
 
 
 
@@ -217,3 +217,36 @@ Based on his observation of ten Chicago-area high schools, sociologist James Col
 As sociologist Bennett Berger argued in an incisive 1963 review, much of the criticism of teenagers exaggerated their separate and "countercultural" way of life. Coleman, for instance, missed a number of similarities between the teenagers that he studied and their parents. A majority of parents probably did not look at high school as solely, or even primarily, an academic venture. Teenagers' interest in cars, clothes, the opposite sex, and sports followed adults’ interest in those very same things. Berger pointed out that football, which Coleman dismissed as anti-intellectual and retrograde, served as a catalyst for community building, something academic achievement were too individualized and specialized to accomplish. Tales of juvenile delinquency and rock 'n' roll fueled rebellion notwithstanding, American teenagers could imitate their parents' way of life. A majority of Coleman's respondents indicated that they preferred the parent-approved Pat Boone over Elvis Presley by a wide margin and claimed that they would rather risk breaking with a friend than earning their parents’ disapproval.[^55]
 
 [^55]: Bennett M. Berger, “Adolescence and Beyond: An Essay Review of Three Books on the Problems of Growing Up: *The Adolescent Society* by James Coleman; *Growing Up Absurd* by Paul Goodman; *The Vanishing Adolescent* by Edgar Z. Friedenberg,” *Social Problems* 10, 4 (Spring): 394-408.
+
+ecisions in a social environment with an impoverished sense of the possibility of self.[@friedenberg1959 @goodman2012; @henry1963].
+
+Of the three, Friendenberg drew most directly on Erikson. He deplored that American adolescence had ceased to be a period of experimentation and true counterculture and had instead been contaminated by adult insistence that activities have socially acceptable ends. Unlike simple societies and lower-class subcultures, Friendenberg argued, intricate social organizations require an extended testing process so people develop a repertoire of responses to complex and changing expectations. Stable ego identities emerge, he maintained, when individuals set themselves against the social order and become aware of “the complex, subtle, and precious difference between himself and his environment.”[@friedenberg1959, p. 13] Controversially, Friedenberg advocated freedom for teenagers to act as if they were young aristocrats. He meant by the contention that adolescents would develop a profound sense of self if it were safe for them to be self-assured, not that they should learn to act imperiously and without consequences. Adults, he conceded, were unlikely to accept such a demeanor from their offspring but there was a model for safe aristocratic demeanor in British boarding schools, which gave “adolescents something to be adolescent about” in a relatively protected environment. American children, on the other hand, were provided experiences with the appearance of adulthood but none of the difficulties or unpleasantness. Friendenberg criticized teachers, parents and those in the helping professions for failing to let disagreements to unfold properly. The bland other-directedness of modern American society was predicated on the belief that all disagreements were unproductive. Because teenage differences were actively suppressed, American teenagers had fewer chances to achieve authentic self understanding.
+
+In contrast to Coleman's portrait of teenagers without supervision, both Goodman and Henry recognized adult control in American high schools, apprentice programs, and even much recreation. They glimpsed in these activities training for the regimented work of adulthood, what Goodman called "the organized system," [The introduction to @goodman2012 outlines goodman's view of the American political and social system.] Goodman maintained that the organized system did not want youth to grow into men because men "did not suit." They were too likely to question and to demand meaning, something that ran counter to the rote and discipline necessary for most extant jobs for which teenagers were preparing. Unlike Friedenberg, Goodman traced the problem of youth to the lack of connection to social life as a whole. Adolescence in general and the school in particular was an exercise in boundary creation and impulse policing. Limited and channeled, Goodman contended, American youth were denied the chance to mold their world to their liking, a condition that prepared adolescents for routinized, meaningless work in factories and offices. For Goodman, simply rejecting the American way of growing up was insufficient, Goodman maintained. The Beats earned his disapproval for their resignation and, while understanding of delinquents’ response, he nonetheless found them too fatalistic for his liking.
+
+In Henry's socially aware Freudian version based on observation of St. Louis area high schools, the absence of ego ideals affected more than delinquents. The example of “hard-working daddies” who are “little at home and burdened with the irritations, coronaries, and ulcers of their work” only underwrote pleasure-seeking behavior. In contrast to Coleman, Henry regarded school work as unchallenging and meaningless. Studying, especially when nagged to do so by parents, made Henry’s informants feel at the will of others. Promise of vague future benefits from school work only compounded the feeling. Yet because adolescents neither developed their own standards of success nor were involved in institutions in which the standards were meaningful to their talents or aspirations, grades loomed large in their education and work life. Grading met no needs, Henry claimed, but it did accustom students to accept impersonal, standardized norms as the best metric of self-worth. For the majority, this too was a recipe for feelings of inadequacy. Turning to pleasure seeking in response yielded little long-term gain and augured poorly for leaving adolescence with an Eriksonian “reward.”
+
+<!-- Needs Rewriting. -->
+
+Both Goodman and Freidenberg treat boys as the norm. They made virtually no mention of girls's problems or their futures. Women, Goodman insisted in the introduction, did not grow up absurd since they “will have children which is absolutely self-justifying, like any other natural or creative act.” Further, he went on in the introduction, the problems of teenage boys were “intensely interesting to women, for if the boys do not grow up to be men, where shall the women find men?”[^59] Henry, on the other hand, took girls' problems seriously, noting the degree to which they also experienced anxiety. More than any other analyst, Henry captured the silent terror and constant confusion of adolescence. Realizing that teenagers were especially prone to the demands of the id, he postulated that the constant mobility of American life made friendships, which would have enabled sublimation, were often unstable. Such instability resulted in an inadequacy felt on the prom dance floor and automobile backseats. Parental shortcomings lay less in the absence of discipline than in failure to establish and live out meaningful lives. This inability of adults to provide ego ideals, Henry argued, created a void that peers filled. Girls were especially affected in adolescence. The difficulty lay not so much in limited goals, since beauty, fashion and popularity struck him as legitimate and meaningful pursuits, as parental goading of girls into sexual competition to snare the right husband and condemnation of those who refused to compete.[^60]
+
+[^59]: Goodman, *Growing Up Absurd*, 21-22.
+
+[^60]: Henry, *Culture Against Man*, 147-282, especially 170-180.
+
+While teenagers put together a culture of music and comic books that often disturbed their parents, the films and novels that depicted the adolescent search for self, while often sympathetic to the trials and tribulations of the young, was less Friedenberg than Farnham. Although they shared with earlier coming-of-age stories the conventions of a confused and unsettled protagonist and a distant and seemingly implacable social order, those of the mid-twentieth century departed from the models of the classic *bildungsroman* and *kunstlerroman*. Those were novels of formation and growth of self. Narrated in the third person, connoting the objective truth of the situation, classic youth novels ended with the protagonists wiser and more understanding than when they began, their skills in negotiating the variability of life enhanced. Beginning their journey set against a society that seemingly had no place for them, they usually ended with a better sense of where they fit in and who they were. Their hard-won maturity enabled them to avoid repeating the mistakes of youth. Of the portrayal of adolescent crisis that were popular among subsequent generations (or at least teachers of subsequent generations), perhaps only John Knowles’s *Separate Peace* (1959) harkened back to nineteenth-century traditions of character formation.
+
+Much postwar depictions, on the other hand, resisted conjuring up a viable or attractive version of maturity. Written in the first person or shot with a subjective camera, midcentury novels and films were statements of feeling, perceptions, and partial understandings of the narrator. Those viewpoints were partial and rarely broaden out to larger views. As titles such as *On the Road* and *Rabbit Run* indicate, postwar novels and films emphasized movement, not arrival. Their protagonists lack meaningful models and meaningful goals. The classic youth movies and novels often point to the romance of permanent adolescence. In highlighting their rejection of adult corruption and their own suffering, the teenagers of the classic postwar adolescent work of art treat their status as unique regardless of whether their acts truly warrant that designation. Even those characters whose lives are not particularly angst-ridden, like the protagonist of Saul Bellow’s picaresque novel, *The Adventures of Augie March* (1953), lack a sense of purpose and commitment. March’s tale takes him from one thing to another, from Chicago poolrooms and Mexican deserts to service in the Merchant Marine and a sketchy postwar European business career. March is optimistic rather than morose. He imagines himself a “sort of Columbus” having before him an “immediate terra incognita that spreads out in every gaze.” Yet he shares with other adolescent protagonists a lack of overarching goals, deep held commitments, or truly stable or affectionate relationships with others.
+
+Despite its reputation, Nicholas Ray’s *Rebel Without a Cause* (1955), a film depicting twenty-four hours in the life of troubled teenager Jim Stark, was less rebellious than conservative. Known for James Dean’s star turn in which he combined daring, anger, pain, and an expressive adolescent inarticulateness, the movie often seemed like Farnham in Technicolor. Jim’s parents never make him face the consequences of his behavior, moving to a new school every time he has a brush with the law or fails to make friend. When he tries to take responsibility for the death of a rival during a “chickie run,” a race in two stolen cars towards a cliff that is won by being the last to jump out, his parents attempt to dissuade him, much to his disgust. At the heart of Jim’s teen angst is the gender trouble all around him. His cold and demanding mother clearly dominates his father, who backs down in nearly every argument rather than live with unpleasantness. His father (Jim Backus) so obviously lacks the proper masculinity that he wears an apron over his suit while doing household chores (a particular warning sign in a period committed to a clear and obvious sexual division of roles, which Ray emphasized by making it a particularly frilly full-length one). He does not, and apparently cannot, answer Jim’s constant question about what one has to do to be a man. The lack of guidance drives Jim to complain that his father just wants to be his pal. He goes so far as to hope his dad would haul off and hit his mother just once and set things straight. No one, he concludes, could grow up in a circus like that. His parents’ mixed messages, he howls after being brought to jail for public drunkenness, are tearing him apart. He is not the only teen who has parents who fail to fulfill their proper gender roles. Judy (Natalie Wood), whose efforts to kiss her father are greeted with pushes and slaps, and Plato (Sal Mineo), a boy coded as gay whose father fled his family, end up in an abandoned mansion where they play fantasy family with quite traditional roles. After Jim’s dad vows to be a better father, restoring the family to its proper patriarchal form. That, in turn, allows Jim a proper romantic relationship with Judy.
+
+The allure of permanent adolescence was part of the long-standing appeal of J. D. Salinger's *Catcher in the Rye* (1951). The protagonist Holden Caulfield's tendency to make snap and absolute moral judgments, his emotional instability, and inability to form meaningful connections exemplify the traits that made teenagers fascinating and exasperating. Throughout the novel, Holden is prone to maudlin display of concern, tremendous remorse, and exaggerations and lies. Stung by the death of his brother Allie's death, Holden is deeply uncomfortable with himself and finds it hard to settle into a self. Adulthood by its very nature disturbs and repels him. Almost everyone who has read the book regardless of whether he or she admires Holden's truth telling or recoils from his whininess remembers his tendency to label adults as "phonies" in large measure for their acting in accord with social expectation rather than authentic personal inclination or exercising bad taste. For Holden, both reveal the existence of a world of artifice and manipulation. Yet Holden's adolescence runs deeper than rejection of the social conformity of the adult world.  He treats sexuality as an unwarranted aggression on the innocence of childhood and imagines himself as the protector of purity of children, the catcher in the rye who catches playing children from falling off the edge of a cliff. His uneasiness with adult maturity is further evident in his dismissal of his former teacher's advice that an immature man wishes to die of a noble cause while a mature one hopes to live humbly for one. In light of his fear of change as the destruction childish innocence (the obscenities on thee merry-go-round), it makes sense that Holden envies the stasis of the Eskimos in the diorama at the Natural History museum.
+
+Some critics have touted Sylvia Plath’s novel *The Bell Jar* (1963) as the female version of *Catcher*, and the similarities are clear. Plath’s protagonist, Esther Greenwood, shares with Holden Caulfield a profound alienation from the adult world and from herself. Like him, she judges others as inauthentic and has no sense of what she wants to be. Both the female social world and the depth of Esther's pain makes Plath's novel particularly telling. Winner of a prestigious summer internship at a New York woman’s magazine, *Ladies Day*, Esther is unmoved by what other girls would have regarded as a dream chance, feeling only “still and empty”(2). Unlike her fellow interns, she rejects traditional goals. When asked what she wants to be, she can only manage that she doesn’t know. Conventional female roles repel her. She compares marriage and children rearing to being “brainwashed”: “you went about numb as a slave in some private totalitarian state” (81). Childbirth is akin to being trapped in a “long, blind, doorless and windowless corridor of pain” (62). The double standard infuriates her. She labels her boyfriend Buddy a “hypocrite” when he admits he is not a virgin and breaks off their engagement. Losing her virginity to a tall but not very good-looking mathematician in Cambridge leads to hemorrhaging and a trip to the hospital. In short, she regards the female existence as being under a bell jar --- an image she uses to describe her own empty, airless, suspended experience but applies later to the college girls who play bridge, gossip and study.
+
+Esther finds little way forward. Where Holden aspires to be isolated or in a perpetual adolescent state, Esther struggles simply to be able to say “I am.” Her loss of self becomes so severe that she feels a zombie inside her, preventing her from speaking or writing. Her suicide attempts fail because she is convinced that her body will not obey her mind. Her treatment with an arrogant, self-absorbed male psychiatrist accelerates her efforts at self-annihilation, which almost succeed when she takes fifty sleeping pills at once in her cellar. Confined to a private hospital, she makes tenuous progress under treatment with an empathetic female doctor and is able to achieve a precarious grip on normality, being able to say at a funeral of a friend who successfully committed suicide, “I am, I am, I am,” which she ascribes to “the old brag of my heart.” Even as she recovers, she holds on to her memories of her madness, which allows her to keep her distance from long-standing social roles. The content of her character remains sketchy at best. Nor is it certain that she will not try suicide again.
+
+The popularity of *Bell Jar* and *Catcher*, especially among adults remembering the culture of their youth,  suggests the degree to which youthful alienation, rather than being regarded as an obstacle to coming to terms with one's self and one's feelings, has become a badge of authenticity and a protector of identity against change and social expectations. If so, it suggests that, least in some moments, adults prefer the liminal state of adolescence. That in turn supports contentions that adolescence has becomes a type of ethnicity. It further suggests that postwar efforts to secure the self were less centered than many who explored the matter hoped.[^61]
+
+
+[^61]: See, for instance, [@steed2002] and [@cheever2010, 25-7]
