--- a/s2.md
+++ b/s2.md
@@ -1,14 +1,7 @@
-By the end of the period, Erikson’s work had become an inspiration for criticism not simply of the state of adolescence but also of the culture to which adolescences were expected to adapt. The critics whose indictments appeared in the last 1950s and early 1960s wrote with considerably more sympathy for the dilemmas of teenagers than Farnham or Coleman and were less committed to a version of the self anchored in prevailing values. Taken as a whole, the professor of education Edgar Z. Friedenberg, the anarchist-Gestalt therapist Paul Goodman, and the cultural anthropologist Jules Henry criticized American adolescence for its failure both to be a true moratorium and to provide viable pathways to meaningful love and work. What bedeviled American teenagers was not so much that they were turned loose on their own but that they made decisions in a social environment with an impoverished sense of the possibility of self.[@friedenberg1959 @goodman2012; @henry1963].
+The allure of permanent adolescence was part of the long-standing appeal of J. D. Salinger's *Cathcer in the Rye* (1951). The protagonist Holden Caulfield's tendency to make snap and absolute moral judgments, his emotional instability, and inability to form meaningful connections exemplify the traits that made teenagers fascinating and exasperating. Throughout the novel, Holden is prone to maudlin display of concern, tremendous remorse, and exaggerations and lies. Stung by the death of his brother Allie's death, Holden is deeply uncomfortable with himself and finds it hard to settle into a self. Adulthood by its very nature disturbs and repels him. Almost everyone who has read the book regardless of whether he or she admires Holden's truth telling or recoils from his whininess remembers his tendency to label adults as "phonies" in large measure for their acting in accord with social expectation rather than authentic personal inclination or exercising bad taste. For Holden, both reveal the existence of a world of artifice and manipulation. Yet Holden's adolescence runs deeper than rejection of the social conformity of the adult world.  He treats sexuality as an unwarranted aggression on the innocence of childhood and imagines himself as the protector of purity of children, the catcher in the rye who catches playing children from falling off the edge of a cliff. His uneasiness with adult maturity is further evident in his dismissal of his former teacher's advice that an immature man wishes to die of a noble cause while a mature one hopes to live humbly for one. In light of his fear of change as the destruction childish innocence (the obscenities on thee merry-go-round), it makes sense that Holden envies the stasis of the Eskimos in the diorama at the Natural History museum.
 
-Of the three, Friendenberg drew most directly on Erikson. He deplored that American adolescence had ceased to be a period of experimentation and true counterculture and had instead been contaminated by adult insistence that activities have socially acceptable ends. Unlike simple societies and lower-class subcultures, Friendenberg argued, intricate social organizations require an extended testing process so people develop a repertoire of responses to complex and changing expectations. Stable ego identities emerge, he maintained, when individuals set themselves against the social order and become aware of “the complex, subtle, and precious difference between himself and his environment.”[@friedenberg1959, p. 13] Controversially, Friedenberg advocated freedom for teenagers to act as if they were young aristocrats. He meant by the contention that adolescents would develop a profound sense of self if it were safe for them to be self-assured, not that they should learn to act imperiously and without consequences. Adults, he conceded, were unlikely to accept such a demeanor from their offspring but there was a model for safe aristocratic demeanor in British boarding schools, which gave “adolescents something to be adolescent about” in a relatively protected environment. American children, on the other hand, were provided experiences with the appearance of adulthood but none of the difficulties or unpleasantness. Friendenberg criticized teachers, parents and those in the helping professions for failing to let disagreements to unfold properly. The bland other-directedness of modern American society was predicated on the belief that all disagreements were unproductive. Because teenage differences were actively suppressed, American teenagers had fewer chances to achieve authentic self understanding.
+Some critics have touted Sylvia Plath’s novel *The Bell Jar* (1963) as the female version of *Catcher*, and the similarities are clear. Plath’s protagonist, Esther Greenwood, shares with Holden Caulfield a profound alienation from the adult world and from herself. Like him, she judges others as inauthentic and has no sense of what she wants to be. Yet the social world that Esther finds so oppressive is only partially the one that Holden believes is filled with phonies. The inauthenticity that Plath details takes on a special complexion because it is women’s roles that Esther finds so oppressive. Winner of a prestigious summer internship at a New York woman’s magazine, *Ladies Day*, Esther is unmoved by what other girls would have regarded as a dream chance, feeling only “still and empty”(2). Unlike her fellow interns, she rejects traditional goals. When asked what she wants to be, she can only manage that she doesn’t know. Female identity as conventionally advanced repels her. She compares marriage and children rearing to being “brainwashed”: “you went about numb as a slave in some private totalitarian state” (81). Childbirth is akin to being trapped in a “long, blind, doorless and windowless corridor of pain” (p. 62). The double standard infuriates her. She labels her boyfriend Buddy a “hypocrite” when he admits he is not a virgin and breaks off their engagement. Losing her virginity to a tall but not very good-looking mathematician in Cambridge leads to hemorrhaging and a trip to the hospital. In short, she regards the female existence as being under a bell jar --- an image she uses to describe her own empty, airless, suspended experience but applies later to the college girls who play bridge, gossip and study. Her ability to see the bell jar that others do not establishes her distinctive perception while pointing to a common condition for women.
 
-The consequence was a stage of life that made American adolescents ill prepared to work and love productively as adults. In contrast to Coleman's portrait of teenagers without supervision, both Goodman and Henry recognized adult control in American high schools, apprentice programs, and even much recreation. They glimpsed in these activities training for the regimented work of adulthood, what Goodman called "the organized system," [The introduction to @goodman2012 outlines goodman's view of the American political and social system.] Goodman maintained that the organized system did not want youth to grow into men because men "did not suit." They were too likely to question and to demand meaning, something that ran counter to the rote and discipline necessary for most extant jobs for which teenagers were preparing. Unlike Friedenberg, Goodman envisioned the problem of youth as a divorce from society and life itself. Adolescence in general and the school in particularly created boundaries and limited impulses. Students therefore were denied their chance to mold their world to their liking. Lessons learned in high school continued to offices (and bedrooms). The
+Esther’s lack of traditional feminine desires prompts her to undertake an unsuccessful search for meaning. Her quest to be a writer comes to naught when she is rejected for a summer class at Harvard taught by a famous writer. Finding nothing satisfying, she veers toward a madness that liberates her from the social imperatives imposed upon middle-class women, but which also risks obliterating the internal self altogether. Where Holden aspires to be isolated or in a perpetual adolescent state, Esther struggles simply to be able to say “I am.” At times she feels a zombie inside her, preventing her from speaking or writing, convinced that her deteriorating penmanship is the sign of insanity she needs to hide from her doctor. Her suicide attempts fail because she is convinced that her body will not obey her mind. Where traditionally the mind (or head) has been regarded as the scene of the self, Esther experiences what Abigail Cheever has called “a profound disintegration” in which her body and her mind are not working in tandem; her rationality gone, her existence is affirmed by the acts of her body. Contending that it has “little tricks,” she sets as her goal escaping being “trapped in its stupid cage for fifty years” left “without any sense at all” (153).
 
-If Farnham and Coleman looked rather unsympathetiSchools, he charged, were factories of impulse suppression and sexual prudery. Given his Gestalt commitments, Goodman was especially opposed to selves divided from society. Youth institutions enforced boundaries, denying the young the chance to mold the world to their liking. Under such circumstances, Goodman argued, adulthood was mere adjustment and perpetual living with a perpetually constrained ego. Simply rejecting the American way of growing up was insufficient, Goodman maintained. The Beats earned his disapproval for their resignation and, while understanding of delinquents’ response, he nonetheless found them too fatalistic for his liking. Growing up with meaning, Goodman concluded, required reworking the world of love and work to encourage honesty, independence, and caring.
-
-
-Goodman and Friedenberg shared a dislike of other-directedness and consumerism for preventing independence and authenticity. Although praised for their emphasis on teenage initiative, both attracted criticism their partial portraits of the teenage condition. Critics charged they did far too little empirical observation, dwelt far too much on the pathologies of adolescence and all too often attributed them solely to adult actions. Then, as now, they were also criticized for making the male teenager the norm, a choice possibly a consequence of their own homosexuality. Women, Goodman insisted in the introduction, did not grow up absurd since they “will have children which is absolutely self-justifying, like any other natural or creative act.” Further, he went on in the introduction, the problems of teenage boys were “intensely interesting to women, for if the boys do not grow up to be men, where shall the women find men?”[^48]
-
-Anthropologist Jules Henry, on the other hand, took girls’ problems seriously and provided a more detailed description of the problems of finding one’s self. The adolescence sections of his _Culture Against Man_ (1963), based on observations of St. Louis-area high schools, revealed how the essence of the teen years was insecurity. More than any other analyst, Henry captured the silent terror and constant confusion of adolescence. Writing with a socially aware Freudianism, Henry was sympathetic to the costs of the demands of the id, which were exaggerated by the constant mobility of American life. Because families moved so frequently, friendships, which would have enabled sublimation, were often unstable. Such instability resulted in an inadequacy felt on the prom dance floor and automobile backseats. Parental shortcomings lay less in the absence of discipline than in failure to establish and live out meaningful lives. This inability of adults to provide ego ideals, Henry argued, created a void that peers filled. Girls were especially affected in adolescence. The difficulty lay not so much in limited goals, since beauty, fashion and popularity struck him as legitimate and meaningful pursuits, as parental goading of girls into sexual competition to snare the right husband and condemnation of those who refused to compete.[^49]
-
-Henry located another consequence of the lack of ego ideals in the aversion of teenagers to work. The example of “hard-working daddies” who are “little at home and burdened with the irritations, coronaries, and ulcers of their work” only underwrote pleasure-seeking behavior. Schools, too, were inadequate in setting meaningful ideals. In contrast to Coleman, Henry regarded school work as unchallenging and meaningless. Studying, especially when nagged to do so by parents, made Henry’s informants feel at the will of others. Promise of vague future benefits from school work only compounded the feeling. Yet because adolescents neither developed their own standards of success nor were involved in institutions in which the standards were meaningful to their talents or aspirations, grades loomed large in their education and work life. Grading met no needs, Henry claimed, but it did accustom students to accept impersonal, standardized norms as the best metric of self-worth. For the majority, this too was a recipe for feelings of inadequacy. Turning to pleasure seeking in response yielded little long-term gain and augured poorly for leaving adolescence with an Eriksonian “reward.”
+As her disintegration worsens, Esther enters treatment with an arrogant, self-absorbed and unfeeling male psychiatrist who subjects her to electroshock therapy. Walking out, rather than endure more hellish torture, she continues her efforts at suicide. Eventually she comes close enough to succeeding by taking fifty sleeping pills at once and hiding in her cellar, which results in her confinement in a private hospital. There, after a successful electroshock treatment and an empathetic therapy with a female doctor, she finally comes to a tenuous and fragile grip on normality, being able to say at a funeral of a friend who successfully committed suicide, “I am, I am, I am,” which she ascribes to “the old brag of my heart.” Where her mother insists she treat her illness as if it were a bad dream, she counters to herself that she cannot since it was part of her. By retaining a sense of her madness, Esther emphasizes her distance from social roles, even as she prepares to be released into the social world and lead what others might term a normal existence. Yet the content of her character remains sketchy at best. Nor is it certain that she will not try suicide again. As such, Esther Greenwood serves as a stark example of how fragile the success of finding oneself had become.
